--- a/skydive.html
+++ b/skydive.html
@@ -178,7 +178,7 @@
           IronSkydive <br />
           33 Rue la Fayette, <br />
           75009 Paris, <br />
-          France <br />
+          France "CHANGE" <br />
           +33(0)619 193 088
         </address>
         <h5>Follow Us</h5>
